# fpass

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  db.rs  decrypt.rs  encrypt.rs  main.rs  password.rs
