[package]
name = "fpass"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
arboard = "3.5.0"
argon2 = "0.5.3"
dirs = "6.0.0"
password-hash = "0.5.0"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.4.0"
serde = { version = "1.0.219", features=["derive"] }
serde_json = "1.0.140"
