[package]
name = "fpass"
version = "0.2.5"
edition = "2021"
authors = ["0l3d"]
description = "CLI Password Manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/0l3d/fpass"

[profile.release]
debug = false
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
clap = { version = "4.5", features = ["derive"] }
cli-clipboard = "0.4.0"
dirs = "6.0.0"
password-hash = "0.5.0"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
